[FIX] Profile pic fallback get squashed when name starts to show

--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@
 }
 
 .profile-pic-loading {
-    width: 120px;
+    min-width: 120px;
     height: 120px;
     border-radius: 60px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
